Speed up the build
Made build in parallel by make '-j' option.

--- a/dockerfiles/alpine_3.5_2.2
+++ b/dockerfiles/alpine_3.5_2.2
@@ -89,7 +89,7 @@ RUN set -x \
         rm /gperftools_alpine.diff; \
         ./autogen.sh; \
         ./configure; \
-        make; \
+        make -j ; \
         cp .libs/libprofiler.so* /usr/local/lib;) \
     && (GOPATH=/usr/src/go go get github.com/google/pprof; \
         cp /usr/src/go/bin/pprof /usr/local/bin) \
@@ -141,7 +141,7 @@ RUN set -x \
     && tar -xzf proj.tar.gz -C /usr/src/proj --strip-components=1 \
     && (cd /usr/src/proj; \
         ./configure; \
-        make; \
+        make -j ; \
         make install) \
     && rm -r /usr/src/proj \
     && rm -rf /usr/src/proj \
@@ -151,7 +151,7 @@ RUN set -x \
     && tar -xjf geos.tar.bz2 -C /usr/src/geos --strip-components=1 \
     && (cd /usr/src/geos; \
         ./configure; \
-        make; \
+        make -j ; \
         make install) \
     && rm -r /usr/src/geos \
     && rm -rf /usr/src/geos \
