--- a/dockerfiles/alpine_3.5_2.2
+++ b/dockerfiles/alpine_3.5_2.2
@@ -145,6 +145,7 @@ RUN set -x \
         make install) \
     && rm -r /usr/src/proj \
     && rm -rf /usr/src/proj \
+    && rm -rf /proj.tar.gz \
     && : "---------- geos (for gis module) ----------" \
     && wget -O geos.tar.bz2 http://download.osgeo.org/geos/geos-3.6.0.tar.bz2 \
     && mkdir -p /usr/src/geos \
@@ -155,6 +156,7 @@ RUN set -x \
         make install) \
     && rm -r /usr/src/geos \
     && rm -rf /usr/src/geos \
+    && rm -rf /geos.tar.bz2 \
     && : "---------- luarocks ----------" \
     && cd / \
     && : "ldoc" \
