Create new versions and roll the old
Rolled ahead old branches versions:
  alpine_3.5_1.x
  alpine_3.5_2.1
  alpine_3.5_2.2
  alpine_3.5_2.3
  alpine_3.5_2.x

Created new versions:
  alpine_3.5_1.10.1
  alpine_3.5_1.10.5
  alpine_3.5_1.10.6
  alpine_3.5_2.1.0
  alpine_3.5_2.2.3
  alpine_3.5_2.3.0
  alpine_3.5_2.3.2
  alpine_3.5_2.4
  alpine_3.5_2.4.0
  alpine_3.5_2.4.1
  alpine_3.5_2.5.0

Added information in README.md file how to push images.

--- a/dockerfiles/alpine_3.5_2.2
+++ b/dockerfiles/alpine_3.5_2.2
@@ -45,6 +45,7 @@ RUN set -x \
         lua \
         tar \
         zip \
+        zlib \
         libunwind \
         icu \
         ca-certificates \
@@ -57,6 +58,7 @@ RUN set -x \
         libressl-dev \
         yaml-dev \
         lz4-dev \
+        zlib-dev \
         binutils-dev \
         ncurses-dev \
         musl-dev \
