--- a/dockerfiles/alpine_3.5_2.2
+++ b/dockerfiles/alpine_3.5_2.2
@@ -15,8 +15,7 @@ ENV TARANTOOL_VERSION=${TNT_VER} \
     CURL_TAG=curl-7_59_0 \
     GPERFTOOLS_REPO=https://github.com/gperftools/gperftools.git \
     GPERFTOOLS_TAG=gperftools-2.5 \
-    LUAROCK_SHARD_REPO=https://github.com/tarantool/shard.git \
-    LUAROCK_SHARD_TAG=8f8c5a7 \
+    LUAROCK_VSHARD_VERSION=0.1.14 \
     LUAROCK_AVRO_SCHEMA_VERSION=3.0.3 \
     LUAROCK_EXPERATIOND_VERSION=1.0.1 \
     LUAROCK_QUEUE_VERSION=1.0.6 \
@@ -173,10 +172,8 @@ RUN set -x \
     && tarantoolctl rocks install queue $LUAROCK_QUEUE_VERSION \
     && : "connpool" \
     && tarantoolctl rocks install connpool $LUAROCK_CONNPOOL_VERSION \
-    && : "shard" \
-    && git clone $LUAROCK_SHARD_REPO /rocks/shard \
-    && git -C /rocks/shard checkout $LUAROCK_SHARD_TAG \
-    && (cd /rocks/shard && tarantoolctl rocks make *rockspec) \
+    && : "vshard" \
+    && tarantoolctl rocks install vshard $LUAROCK_VSHARD_VERSION \
     && : "http" \
     && tarantoolctl rocks install http $LUAROCK_HTTP_VERSION \
     && : "pg" \
@@ -194,8 +191,7 @@ RUN set -x \
     && : "gperftools" \
     && tarantoolctl rocks install gperftools $LUAROCK_TARANTOOL_GPERFTOOLS_VERSION \
     && : "---------- remove build deps ----------" \
-    && apk del .build-deps \
-    && rm -rf /rocks
+    && apk del .build-deps
 
 RUN mkdir -p /var/lib/tarantool \
     && chown tarantool:tarantool /var/lib/tarantool \
