--- a/dockerfiles/alpine_3.5_1.10.3
+++ b/dockerfiles/alpine_3.5_1.10.3
@@ -22,6 +22,7 @@ ENV TARANTOOL_VERSION=${TNT_VER} \
     LUAROCK_CONNPOOL_VERSION=1.1.1 \
     LUAROCK_HTTP_VERSION=1.1.0 \
     LUAROCK_MEMCACHED_VERSION=1.0.0 \
+    LUAROCK_METRICS_VERSION=0.2.0 \
     LUAROCK_TARANTOOL_PG_VERSION=2.0.2 \
     LUAROCK_TARANTOOL_MYSQL_VERSION=2.0.1 \
     LUAROCK_TARANTOOL_CURL_VERSION=2.3.1 \
@@ -176,6 +177,8 @@ RUN set -x \
     && tarantoolctl rocks install mysql $LUAROCK_TARANTOOL_MYSQL_VERSION \
     && : "memcached" \
     && tarantoolctl rocks install memcached $LUAROCK_MEMCACHED_VERSION \
+    && : "metrics" \
+    && tarantoolctl rocks install metrics $LUAROCK_METRICS_VERSION \
     && : "prometheus" \
     && tarantoolctl rocks install prometheus $LUAROCK_TARANTOOL_PROMETHEUS_VERSION \
     && : "curl" \
