Add 2.8.4 and 1.10.13 versions
Since 2.8.4 and 1.10.13 have been released the correnponding docker
images need to be uploaded to the Docker Hub.

Added 'bsd-compat-headers' package for alpine 3.9 Dockerfile as it is
required for `cdefs.h`. Without the package an error raises during
the build:

    fatal error: sys/cdefs.h: No such file or directory

Part of #222

--- a/dockerfiles/alpine_3.9
+++ b/dockerfiles/alpine_3.9
@@ -60,6 +60,7 @@ RUN set -x \
         readline-dev \
         openssl-dev \
         yaml-dev \
+        bsd-compat-headers \
         lz4-dev \
         zlib-dev \
         binutils-dev \
