Add 2.10.0-rc1 version
Added two new args:

   - LUAJIT_DISABLE_SYSPROF to disable sysprof due to an error
     'undefined reference to backtrace' during the build
   - LUAJIT_ENABLE_GC64 to build Tarantool with enabled GC64

Part of tarantool/infra#88

--- a/dockerfiles/alpine_3.9
+++ b/dockerfiles/alpine_3.9
@@ -34,7 +34,10 @@ ENV TARANTOOL_VERSION=${TNT_VER} \
 
 COPY files/gperftools_alpine.diff /
 
-ARG ENABLE_BUNDLED_LIBYAML
+ARG ENABLE_BUNDLED_LIBYAML \
+    LUAJIT_DISABLE_SYSPROF \
+    LUAJIT_ENABLE_GC64
+
 RUN set -x \
     && apk add --no-cache --virtual .run-deps.1 \
         libstdc++ \
@@ -118,6 +121,8 @@ RUN set -x \
        cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo\
              -DENABLE_BUNDLED_LIBYAML:BOOL=${ENABLE_BUNDLED_LIBYAML}\
              -DENABLE_BACKTRACE:BOOL=ON\
+             -DLUAJIT_DISABLE_SYSPROF:BOOL=${LUAJIT_DISABLE_SYSPROF} \
+             -DLUAJIT_ENABLE_GC64:BOOL=${LUAJIT_ENABLE_GC64} \
              -DENABLE_DIST:BOOL=ON\
              .) \
     && make -C /usr/src/tarantool -j ${NPROC} \
